# mytradingmind-ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
aegis_trader/: __init__.py  app.py
deploy/: Dockerfile  docker-compose.yml  mariadb.local.env.example  mariadb_init.sql  ubuntu-mariadb-notes.md  ubuntu.env.example
docs/: ARCHITECTURE.md  GITHUB_UPLOAD_GUIDE.md  INSTITUTIONAL_READINESS.md  RELEASES.md  UBUNTU_DROPLET_DEPLOYMENT.md
mytradingmind/: __init__.py  dashboard.py  runtime.py
scripts/: __init__.py  binance_backfill.py  binance_stream.py  binance_testnet_probe.py  build_architecture_review_doc.py  create_ubuntu_database.sh  enterprise_security_test.py  generate_activation_sql.py  generate_top10_metrics.py  historical_flash_crash_stress.py  init_db.py  install_sanity_ubuntu.sh  institutional_check.py  live_scan_binance.py  preinstall_check_ubuntu.py  preinstall_check_ubuntu.sh  production_readiness_stress.py  reboot_verify_ubuntu.sh  resample_binance_candles.py  reset_docker_db.sh  run_headless_runtime.py  runtime_diagnostics.py  runtime_monitor.sh  runtime_start.sh  runtime_stop.sh  start_aegis_live.ps1  start_dashboard.py  upgrade_ubuntu.sh  validate_build.py  validate_env.py
tests/: test_binance_history.py  test_binance_stream_timeframes.py  test_consensus_and_certification.py  test_dashboard_launcher.py  test_event_bus.py  test_historical_flash_crash_stress.py  test_institutional_check.py  test_logging_diagnostics.py  test_mariadb_persistence_config.py  test_production_readiness_stress.py  test_release_version_docs.py  (+4 more)
(+103 files in other folders)
