[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytradingmind-ai"
version = "1.2.6"
description = "Event-driven institutional-grade autonomous Binance spot trading operating system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "SQLAlchemy>=2.0",
  "aiomysql>=0.2",
  "alembic>=1.13",
  "PyMySQL>=1.1",
  "redis>=5.0",
  "ccxt>=4.0",
  "openai>=1.0",
  "pandas>=2.0",
  "numpy>=1.26",
  "polars>=0.20",
  "pyarrow>=14.0",
  "streamlit>=1.30",
  "plotly>=5.0",
  "certifi>=2024.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
]
pro = ["ccxtpro>=4.0"]

[project.scripts]
mytradingmind = "aegis_trader.app:main"
aegis-trader = "aegis_trader.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["aegis_trader*", "mytradingmind*"]
